# clause

./: .gitignore  LICENSE  docker-compose-dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  documents.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/db/: session.py
backend/app/models/: document.py  user.py
backend/app/routers/: auth.py  documents.py
backend/app/services/: document.py
backend/app/services/storage/: base.py  factory.py  local.py  s3.py  service.py
